Added status info.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,6 +20,14 @@ fieldset {
     border-image: initial;
 }
 
+p {
+    font-weight: bold;
+}
+
+code {
+    font-weight: normal;
+}
+
 legend {
     display: block;
     -webkit-padding-start: 2px;
