--- a/public/css/style.css
+++ b/public/css/style.css
@@ -50,3 +50,27 @@ legend {
 #unhappy {
     font-size: 60px
 }   
+
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+    text-align: center;
+}
+
+table {
+    width: 100%;
+}
+
+th, td {
+    font-size: 12px;
+    padding: 5px;
+}
+
+tr:hover {
+    background-color: #f5f5f5
+}
+
+th {
+    background-color: #4CAF50;
+    color: white;
+}
