--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
     <div class="text">
     <p>Version: <code><%= version %> (<%=protversion%>)</code></p>
     <p>Subversion: <code><%= subversion %></code></p>
-    <p>Services: <code></code></p>
+    <p>Services: <code><%= localservices %></code></p>
     <p>Relay Fee: <code><%=relayfee%></code></p>
     <p>Uptime: <code><%= uptime %></code></p>
   </div>
@@ -104,5 +104,6 @@
     </div>
   </fieldset>
 
+  <footer></footer>
 </body>
 </html>
