--- a/views/index.ejs
+++ b/views/index.ejs
@@ -74,7 +74,6 @@
                     <td><%= peers[i].inbound %> </td>
                     <td class="bytes"><%= peers[i].bytessent %> / <%= peers[i].bytesrecv %> </td>
                 </tr>
-        
             <% }; %>
         </table>
     </div>
@@ -103,7 +102,8 @@
         </table>
     </div>
   </fieldset>
+  <br>
 
-  <footer></footer>
+  <footer>Source code <a href="https://github.com/Invertee/NodeStatus">here.</a></footer>
 </body>
 </html>
