--- a/views/index.ejs
+++ b/views/index.ejs
@@ -104,6 +104,6 @@
   </fieldset>
   <br>
 
-  <footer>Source code <a href="https://github.com/Invertee/NodeStatus">here.</a></footer>
+  <footer>Source code <a href="https://github.com/Invertee/NodeStatus">here.</a> Request Proccessed in <%=time%>ms</footer>
 </body>
 </html>
