--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,6 +27,7 @@
     <p>Best blockhash: <code><%=bestblockhash%></code></p>
     <p>Headers: <code><%=headers%></code></p>
     <p>Difficulty: <code><%=difficulty%></code></p>
+    <p>Hashes-per-Second: <code><%=mining.networkhashps%></code></p>
     <p>Median Time: <code><%=mediantime%></code></p>
     <% if (blockchainsize) { %>
     <p>Blockchain Size: <code><%=blockchainsize%></code></p>
@@ -62,7 +63,6 @@
                 <th>Address:</th>
                 <th>Services:</th>
                 <th>Connection Time:</th>
-                <th>Version:</th>
                 <th>Subversion:</th>
                 <th>Inbound:</th>
                 <th>Bytes Sent/Received:</th>
@@ -72,10 +72,9 @@
                     <td><%= peers[i].addr %> </td>
                     <td class="peerservices"><%= peers[i].services %> </td>
                     <td class="connectiontime"><%= peers[i].conntime %> </td>
-                    <td><%= peers[i].version %> </td>
-                    <td><%= peers[i].subver %> </td>
+                    <td><%= peers[i].subver %> (<%= peers[i].version %>) </td>
                     <td><%= peers[i].inbound %> </td>
-                    <td class="bytes"><%= peers[i].bytessent %> / <%= peers[i].bytesrecv %> </td>
+                    <td title="Ping: <%= (peers[i].pingtime * 1000).toFixed() %>ms" class="bytes"><%= peers[i].bytessent %> / <%= peers[i].bytesrecv %> </td>
                 </tr>
             <% }; %>
         </table>
@@ -107,6 +106,6 @@
   </fieldset>
   <br>
 
-  <footer>Source code <a href="https://github.com/Invertee/NodeStatus">here.</a> Request Proccessed in <%=time%>ms</footer>
+  <footer>Source code <a href="https://github.com/Invertee/NodeStatus">here</a>. Request Proccessed in <%=time%>ms</footer>
 </body>
 </html>
